welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: ')' expected but '=' found.
	if (((a - Math.abs(a)) = 0) && ((b - Math.abs(b) = 0))) {
                               ^posNeg:2: error: illegal start of simple expression
	if (((a - Math.abs(a)) = 0) && ((b - Math.abs(b) = 0))) {
                                                              ^